# Arc

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/: ARC.h  defines.h  entrypoint.h
engine/src/core/: application.cpp  application.h  asserts.h  factory.cpp  factory.h  logger.cpp  logger.h
engine/src/event/: event.h  event_dispatcher.h  event_key.h  glfwIntegration.h
engine/src/platform/: platform.h  platform_linux.cpp  platform_win32.cpp
engine/src/renderer/: GL_context.h  GL_context_glfw.cpp  GL_context_glfw.h
engine/src/window/: window.cpp  window.h  window_glfw.cpp  window_glfw.h
physics-engine/: CMakeLists.txt
physics-engine/src/: physics-engine.h
physics-engine/src/core/: Application.cpp  Application.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
tests/: test_application.cpp  test_event.cpp  test_factory.cpp  test_logger.cpp
vendors/GLFW/lib/: libglfw.so.3.4
